--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Aquiila/comp4537-TermProject/issues"
   },
-  "homepage": "https://github.com/Aquiila/comp4537-TermProject#readme"
+  "homepage": "https://github.com/Aquiila/comp4537-TermProject#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  }
 }
